# llm-evals-observability-lab

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: dashboard.py
configs/: app.yaml  eval.yaml  retrieval.yaml
data/eval/: eval_set.json
data/processed/: chunks.json
data/raw/: corpus.json
docs/: architecture.md  evaluation_methodology.md  roadmap.md
notebooks/: 01_dataset_overview.ipynb  02_rag_pipeline_walkthrough.ipynb  03_eval_analysis.ipynb  04_failure_modes.ipynb
results/runs/: 0079e584-15a9-48c1-b554-33070c02db77.json  00cce11c-b6fc-4361-b171-dd4cdec1eceb.json  01238f07-379d-4018-8bc3-e5db18719e71.json  03477180-98b0-4a78-837e-deda4f920a5f.json  05660638-fdfb-4978-8eb7-5f4c8d475d3b.json  079d4497-2873-419f-bdae-7c5105f37505.json  0a1bffb4-238d-4a06-8b77-054b2edd9da5.json  0aa6214a-b2b3-4e48-8e54-659ab614b782.json  0bd129b7-199e-495e-9f75-5c2f7087c59d.json  0ef9c1dd-b847-49a6-aa4a-50c1fdfb24e9.json  0f0bfcc4-feb1-436b-ad5e-b9e39f5fc303.json  1219361a-843c-4806-8dfd-16a70f4ffaff.json  1548336e-84c4-4f40-a8b4-22e20f25a596.json  17699a6d-7d93-4015-8edb-5deb7893fcfb.json  1bff380a-4ba8-4dbc-b939-7678b61bbe38.json  1d10c12b-026f-42bb-a389-320c4e03248d.json  1e9fb1a2-2404-45b0-aaca-a1d585f82f98.json  22db22c6-9e8c-47ea-b9e1-9da60f4d8cdf.json  22e615b2-fc6d-4b0d-b702-7b5aad71556b.json  2a2a6dac-6867-4f81-8c57-0c81d2764214.json  2d4edd64-6803-4a36-8161-ca61848be6b5.json  2da362e6-78d7-4be3-9b68-89349fedc3aa.json  2e937b04-9057-4c37-aa1e-c33b4ce7a4cc.json  368c1459-bcc2-432b-ac98-adeb8225edf8.json  3895fa97-ce4d-4e08-bea8-70b31e40a44d.json  399c92d3-22cc-4648-bec1-290040872ddd.json  3b1816f9-fb1a-41b4-9270-b03806503adc.json  3d24ca66-9ae0-421d-9abf-fe4aab426a81.json  (+92 more)
scripts/: _show_traces.py  analyze_results.py  build_eval_set.py  prepare_data.py  run_baseline.py  run_experiments.py
tests/: conftest.py  test_chunking.py  test_evaluator.py  test_pipeline.py  test_retriever.py
(+42 files in other folders)
