[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-evals-lab"
version = "0.1.0"
description = "A production-grade evaluation and observability framework for RAG and agentic LLM systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "LLM Evals Lab", email = "evals@example.com" }]
keywords = ["llm", "evaluation", "rag", "observability", "nlp", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pyyaml>=6.0.1",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
    "streamlit>=1.29.0",
    "tqdm>=4.66.0",
    "rich>=13.7.0",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.2.2"]
dev = ["pytest>=7.4.0", "pytest-cov>=4.1.0", "jupyter>=1.0.0", "ipykernel>=6.27.0"]

[project.urls]
Homepage = "https://github.com/yourusername/llm-evals-observability-lab"
Documentation = "https://github.com/yourusername/llm-evals-observability-lab/docs"
Repository = "https://github.com/yourusername/llm-evals-observability-lab"
Issues = "https://github.com/yourusername/llm-evals-observability-lab/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/llm_evals_lab"]
omit = ["tests/*"]
